<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">speedMath</string>
    <string name="hello_world">Hello world!</string>
    <string name="description"> YOUR_DESCRIPTION_HERE </string>
    <string name="start"> Start </string>
    <string name="title_activity_screen2">Screen2</string>
    <string name="action_settings">Settings</string>
     <string name="add">+</string>
      <string name="eq">=</string>
      <string name="firstNum">1</string>
      <string name="SecondNum">2</string>
      <string name="Enter">Enter</string>
      <string name="Del">Delete</string>
      <string name="num1">1</string>
      <string name="num2">2</string>
      <string name="num3">3</string>
      <string name="num4">4</string>
      <string name="num5">5</string>
      <string name="num6">6</string>
      <string name="num7">7</string>
      <string name="num8">8</string>
      <string name="num9">9</string>
      <string name="num0">0</string>
       <string name="time">Time:</string>
      
    

</resources>
