<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/matrix"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.speedmath.Screen2" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" >

         <TextView
             android:id="@+id/time"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/white"
             android:ems="10"
             android:text="@string/time" />
         
         <TextView
        android:id="@+id/timer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/white"
        android:ems="10"
        android:text="" />
         
          <TextView
        android:id="@+id/question"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/white"
        android:ems="10"
        android:text="" />

        <TextView
            android:id="@+id/F1num"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/white"
            android:ems="10"
            android:text="@string/firstNum"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/white"
            android:ems="10"
            android:inputType="none"
            android:text="@string/add"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/S2num"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/white"
            android:ems="10"
            android:text="@string/SecondNum"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/equals"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/white"
            android:inputType="none"
            android:text="@string/eq" 
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/ans"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/white"
            android:ems="10"
            android:inputType="none"
            android:textSize="14sp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
  		android:layout_centerHorizontal="true"
        android:alignmentMode="alignBounds"
        android:columnCount="3"
        android:rowCount="5" >

        <Button
            android:id="@+id/button7"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="0"
            android:layout_row="0"
            android:background="@drawable/a7"
            android:onClick="seven" />

        <Button
            android:id="@+id/button8"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="1"
            android:layout_row="0"
            android:background="@drawable/a8"
            android:onClick="eight" />

        <Button
            android:id="@+id/button9"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="2"
            android:layout_row="0"
            android:background="@drawable/a9"
            android:onClick="nine" />

        <Button
            android:id="@+id/button5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="1"
            android:layout_row="1"
            android:background="@drawable/a5"
            android:onClick="five" />

        <Button
            android:id="@+id/button6"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="2"
            android:layout_row="1"
            android:background="@drawable/a6"
            android:onClick="six" />

        <Button
            android:id="@+id/button3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="2"
            android:layout_row="2"
            android:background="@drawable/a3"
            android:onClick="three" />

        <Button
            android:id="@+id/button4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@drawable/a4"
            android:onClick="four" />

        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="0"
            android:layout_row="2"
            android:background="@drawable/a1"
            android:onClick="one" />

        <Button
            android:id="@+id/button0"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="1"
            android:layout_row="3"
            android:background="@drawable/a0"
            android:onClick="zero" />

        <Button
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@drawable/a2"
           android:onClick="two" />

        <Button
            android:id="@+id/button10"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/Enter"
            android:onClick="enter1" />

        <Button
            android:id="@+id/button11"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="3"
            android:text="@string/Del"
            android:onClick="del"  />

    </GridLayout>

   

</RelativeLayout>